# bashconfigparser

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
bashconfigparser/: __init__.py
