[metadata]
name = bashconfigparser
version = 1.0.0
author = Peter Varkoly
description = Short description
readme = README.md
license = MIT
license_files = LICENSE
urls = https://github.com:Cranix-Solutions/bashconfigparser
homepage = https://github.com:Cranix-Solutions/bashconfigparser

[options]
packages = find:
python_requires = >=3.11
install_requires =
